Fix about me margin (too much)

--- a/src/mobile-styling/about.css
+++ b/src/mobile-styling/about.css
@@ -6,6 +6,7 @@
 
 .about-me-container > h2 {
   color: #161e34;
+  margin: 0 0 40px 0;
 }
 
 .info-and-resume {
